lang/macro/tests/ui/fail/18-too-many-inputs.stderr
error: the number of input arguments should not exceed 16
  --> $DIR/18-too-many-inputs.rs:16:13
   |
16 | /             a0: u8,
17 | |             a1: u8,
18 | |             a2: u8,
19 | |             a3: u8,
...  |
31 | |             a15: u8,
32 | |             a16: u8,
   | |___________________^
